# ai-engineer-guide

./: AGENTS.md  AI_ENGINEER_ROADMAP_CHAT.md  OFFLINE_STUDY_GUIDE.md  README.md  STUDY_RESOURCES.md
blog-learning-resources/: README.md  SOURCES.md  path-to-staff-llm-internals.md
docs/: CURRICULUM_MAINTENANCE.md  OFFLINE_PRODUCT_FEATURE_SPEC.md  OFFLINE_SECURITY_AND_PRIVACY.md  RAG_TUTORIAL_PRODUCTIZATION.md
external-curriculum/: README.md  SOURCES.md
external-curriculum/data-science-for-beginners/2-Working-With-Data/07-python/: notebook-covidspread.ipynb
external-curriculum/mcp-for-beginners/00-Introduction/: README.md
external-curriculum/mcp-for-beginners/03-GettingStarted/02-client/: README.md  client_example_csharp.cs
external-curriculum/mcp-for-beginners/03-GettingStarted/05-stdio-server/: README.md
external-curriculum/mcp-for-beginners/03-GettingStarted/08-testing/: README.md
external-curriculum/mcp-for-beginners/03-GettingStarted/10-advanced/: README.md
external-curriculum/ml-for-beginners/1-Introduction/3-fairness/: assignment.md
external-curriculum/production-rag/: .env.example  .env.test  .gitignore  LICENSE
external-curriculum/production-rag/airflow/: requirements-airflow.txt
external-curriculum/production-rag/src/: middlewares.py
external-curriculum/production-rag/tests/: conftest.py
external-curriculum/rag-tutorial/: .gitignore  .gitmodules  CHEATSHEET.md  IMPORT_NOTES.md  NOTES.md  README.md  pyproject.toml
external-curriculum/rag-tutorial-source/: README.md  python_tutorial.py  setup.py
scripts/: check_offline_curriculum.sh
(+233 files in other folders)
