[project]
name = "rag-tutorial"
version = "0.1.0"
description = "Companion repository for a local-first Retrieval-Augmented Generation tutorial."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "accelerate>=1.0",
    "huggingface-hub>=0.33",
    "matplotlib>=3.9",
    "numpy>=2.2",
    "pandas>=2.2",
    "psutil>=7.0",
    "pymupdf>=1.26",
    "requests>=2.32",
    "sentence-transformers>=3.2,<4",
    "spacy>=3.8",
    "torch>=2.4",
    "tqdm>=4.67",
    "transformers>=4.46,<4.47",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
]

[tool.uv]
package = false
